Keycloak_IdP/argocd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: 174391158959.dkr.ecr.us-east-1.amazonaws.com/keycloak:latest
        imagePullPolicy: Always
        args: ["start "]
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
   alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-3:174391158959:certificate/787244f8-7c83-41ea-bd7f-05bf319a8b44
   alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8080}, {"HTTPS": 443}]'
   alb.ingress.kubernetes.io/scheme: internet-facing
   alb.ingress.kubernetes.io/target-type: ip
   alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    #kubernetes.io/ingress.class: nginx
   #nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: alb
  rules:
  - host: iam.smartdev.ai
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: keycloak
            port:
              number: 8080
  tls:
  - hosts:
    - iam.smartdev.ai
